# OpenTrickler-RP2040-Controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_pico_2w.ps1  build_pico_w.ps1  configure_cmake_for_pico2w.ps1  configure_env.ps1  debug.sh  openocd_start.bat  openocd_start.sh  program.bat  program.sh  run_vscode.ps1  serial-flash_app.bat
.agents/skills/c-style/: SKILL.md
.agents/skills/development-plan-writing/: SKILL.md
.agents/skills/py-style/: SKILL.md
.agents/skills/py-style/evals/: evals.json
.agents/skills/py-style/references/: examples.md
.agents/skills/python-venv/: SKILL.md
.github/workflows/: cmake.yml  pr_agent.yml
manuals/: Scale-Settings  configure_g&g_scales.md  connect_to_wireless.md  firmware_update_via_usb.md
scripts/: debug.gdb  gen_app_header.py  gen_version.py  html2header.py  program.gdb
scripts/linker_scripts/: bank0.ld  bank1.ld  initial_deployment.ld
src/: CMakeLists.txt  FloatRingBuffer.cpp  FreeRTOSConfig.h  access_point_mode.c  access_point_mode.h  ai_tuning.c  ai_tuning.h  and_scale.c  and_scale.cpp  and_scale_calibrate.c  and_scale_communicator.cpp  app.c  app.cpp  app.h  app_header.c  app_header.h  app_state.c  app_state.h  binary_header.c  button.c  cat24c256_eeprom.c  charge_mode.cpp  charge_mode.h  cleanup_mode.cpp  cleanup_mode.h  common.c  common.h  configuration.h  creedmoor_scale.c  cyw43_control.c  cyw43_control.h  dhcpserver.c  display.c  display.h  display_config.c  display_config.h  dnsserver.c  dnsserver.h  eeprom.c  eeprom.h  (+61 more)
src/boot3/: bootloader.c
src/html/: config.html  dashboard.html  display_mirror.html  mobile_frontend.html  mobile_portal.html  plot_weight.html  web_portal.html  wizard.html
src/html/js/: bootstrap.min.js  jquery-3.7.0.min.js
targets/: fly_ercf.h  raspberrypi_pico_config.h  raspberrypi_pico_w_config.h  rpi_pico_w.h
tests/: config_html_rest_test.py  mobile_frontend_test.py  web_test.py
